Updated loading notebook

--- a/notebooks/data_loading.ipynb
+++ b/notebooks/data_loading.ipynb
@@ -2,282 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "import os.path as op\n",
     "import sys\n",
     "\n",
     "sys.path.append(op.abspath('../code'))\n",
     "\n",
+    "import importlib\n",
+    "\n",
     "import data_loaders as dload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/AlexCionca/opt/miniconda3/envs/STD/lib/python3.7/site-packages/pandas/core/frame.py:9203: FutureWarning: Passing 'suffixes' which cause duplicate columns {'Collection_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
-      "  validate=validate,\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Successfully converted data from 64 dendrites (30 features found).\n"
      ]
-    }
-   ],
-   "source": [
-    "path_to_neuron = '/Users/AlexCionca/Documents/BrainHack-2023/Piriform_neurons/data/brain hack xls/22072c4 - Copy.xls'\n",
-    "\n",
-    "my_dendrite_df = dload.genenerate_dendrite_df(path_to_neuron)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Depth</th>\n",
-       "      <th>Level</th>\n",
-       "      <th>Set 1</th>\n",
-       "      <th>Dendrite Area</th>\n",
-       "      <th>Dendrite Branch Depth</th>\n",
-       "      <th>Dendrite Branch Level</th>\n",
-       "      <th>Dendrite Branching Angle</th>\n",
-       "      <th>Dendrite Branching Angle B</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Dendrite Position Y_y</th>\n",
-       "      <th>Collection_x</th>\n",
-       "      <th>Dendrite Position Z_y</th>\n",
-       "      <th>Collection_y</th>\n",
-       "      <th>Dendrite Resistance</th>\n",
-       "      <th>Dendrite Spine Density</th>\n",
-       "      <th>Dendrite Straightness</th>\n",
-       "      <th>Dendrite Time</th>\n",
-       "      <th>Dendrite Time Index</th>\n",
-       "      <th>Dendrite Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>510000000001</td>\n",
-       "      <td>Dendrite</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Basal</td>\n",
-       "      <td>39.077702</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>542.432007</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>16.605101</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>0.107751</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>51.556499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>510000000004</td>\n",
-       "      <td>Dendrite</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Basal</td>\n",
-       "      <td>100.997002</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.18238</td>\n",
-       "      <td>2.86696</td>\n",
-       "      <td>...</td>\n",
-       "      <td>540.935974</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>17.666300</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>0.272097</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.998039</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>134.285995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>510000000009</td>\n",
-       "      <td>Dendrite</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Basal</td>\n",
-       "      <td>492.992004</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8.68663</td>\n",
-       "      <td>2.22589</td>\n",
-       "      <td>...</td>\n",
-       "      <td>535.322998</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>22.622801</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>1.223970</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.996811</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>673.635986</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>510000000021</td>\n",
-       "      <td>Dendrite</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Basal</td>\n",
-       "      <td>82.556198</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9.58429</td>\n",
-       "      <td>14.04740</td>\n",
-       "      <td>...</td>\n",
-       "      <td>531.278015</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>26.160500</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>0.197541</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.998995</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>114.193001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>510000000023</td>\n",
-       "      <td>Dendrite</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Basal</td>\n",
-       "      <td>167.626007</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5.03014</td>\n",
-       "      <td>12.77790</td>\n",
-       "      <td>...</td>\n",
-       "      <td>527.903015</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>27.539101</td>\n",
-       "      <td>Dendrite Position</td>\n",
-       "      <td>0.395810</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.996370</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>232.891006</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             ID  Category  Depth  Level  Set 1  Dendrite Area  \\\n",
-       "0  510000000001  Dendrite      0      1  Basal      39.077702   \n",
-       "1  510000000004  Dendrite      1      1  Basal     100.997002   \n",
-       "2  510000000009  Dendrite      3      2  Basal     492.992004   \n",
-       "3  510000000021  Dendrite      4      3  Basal      82.556198   \n",
-       "4  510000000023  Dendrite      5      4  Basal     167.626007   \n",
-       "\n",
-       "   Dendrite Branch Depth  Dendrite Branch Level  Dendrite Branching Angle  \\\n",
-       "0                      0                      1                   0.00000   \n",
-       "1                      1                      1                   2.18238   \n",
-       "2                      3                      2                   8.68663   \n",
-       "3                      4                      3                   9.58429   \n",
-       "4                      5                      4                   5.03014   \n",
-       "\n",
-       "   Dendrite Branching Angle B  ...  Dendrite Position Y_y       Collection_x  \\\n",
-       "0                     0.00000  ...             542.432007  Dendrite Position   \n",
-       "1                     2.86696  ...             540.935974  Dendrite Position   \n",
-       "2                     2.22589  ...             535.322998  Dendrite Position   \n",
-       "3                    14.04740  ...             531.278015  Dendrite Position   \n",
-       "4                    12.77790  ...             527.903015  Dendrite Position   \n",
-       "\n",
-       "   Dendrite Position Z_y       Collection_y  Dendrite Resistance  \\\n",
-       "0              16.605101  Dendrite Position             0.107751   \n",
-       "1              17.666300  Dendrite Position             0.272097   \n",
-       "2              22.622801  Dendrite Position             1.223970   \n",
-       "3              26.160500  Dendrite Position             0.197541   \n",
-       "4              27.539101  Dendrite Position             0.395810   \n",
-       "\n",
-       "  Dendrite Spine Density  Dendrite Straightness  Dendrite Time  \\\n",
-       "0                      0               1.000000              0   \n",
-       "1                      0               0.998039              0   \n",
-       "2                      0               0.996811              0   \n",
-       "3                      0               0.998995              0   \n",
-       "4                      0               0.996370              0   \n",
-       "\n",
-       "   Dendrite Time Index Dendrite Volume  \n",
-       "0                    1       51.556499  \n",
-       "1                    1      134.285995  \n",
-       "2                    1      673.635986  \n",
-       "3                    1      114.193001  \n",
-       "4                    1      232.891006  \n",
-       "\n",
-       "[5 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_dendrite_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -288,17 +41,90 @@
        " 'Filament BoundingBoxOO Length B': 514.1090087890625,\n",
        " 'Filament BoundingBoxOO Length C': 599.2890014648438,\n",
        " 'Filament Dendrite Length (sum)': 5181.5498046875,\n",
-       " 'Filament Distance from Origin': 1074.219970703125}"
+       " 'Filament Distance from Origin': 1074.219970703125,\n",
+       " 'Depth-mean': 4.828125,\n",
+       " 'Level-mean': 3.515625,\n",
+       " 'Dendrite Area-mean': 600.2704219929874,\n",
+       " 'Dendrite Branching Angle-mean': 25.231407878920436,\n",
+       " 'Dendrite Branching Angle B-mean': 34.16221151128411,\n",
+       " 'Dendrite Length-mean': 80.5488478122279,\n",
+       " 'Dendrite Orientation Angle-mean': -44.73761618882418,\n",
+       " 'Dendrite Position X_x-mean': 941.6578779220581,\n",
+       " 'Dendrite Position Y_x-mean': 484.4188437461853,\n",
+       " 'Dendrite Position Z_x-mean': 33.74813103675842,\n",
+       " 'Dendrite Straightness-mean': 0.9219231111928821,\n",
+       " 'Depth-std': 3.088918686335665,\n",
+       " 'Level-std': 1.6231674648808172,\n",
+       " 'Dendrite Area-std': 948.6136427557124,\n",
+       " 'Dendrite Branching Angle-std': 28.244479095552,\n",
+       " 'Dendrite Branching Angle B-std': 29.598841103755344,\n",
+       " 'Dendrite Length-std': 81.38881985863236,\n",
+       " 'Dendrite Orientation Angle-std': 71.01136918694932,\n",
+       " 'Dendrite Position X_x-std': 79.38486436688913,\n",
+       " 'Dendrite Position Y_x-std': 59.89429672208469,\n",
+       " 'Dendrite Position Z_x-std': 15.577952315747538,\n",
+       " 'Dendrite Straightness-std': 0.07521421728377924,\n",
+       " 'Depth-min': 0.0,\n",
+       " 'Level-min': 1.0,\n",
+       " 'Dendrite Area-min': 2.2477500438690186,\n",
+       " 'Dendrite Branching Angle-min': 0.0,\n",
+       " 'Dendrite Branching Angle B-min': 0.0,\n",
+       " 'Dendrite Length-min': 0.7082340121269226,\n",
+       " 'Dendrite Orientation Angle-min': -174.63299560546875,\n",
+       " 'Dendrite Position X_x-min': 801.802978515625,\n",
+       " 'Dendrite Position Y_x-min': 325.5360107421875,\n",
+       " 'Dendrite Position Z_x-min': 8.534099578857422,\n",
+       " 'Dendrite Straightness-min': 0.6737120151519775,\n",
+       " 'Depth-max': 12.0,\n",
+       " 'Level-max': 7.0,\n",
+       " 'Dendrite Area-max': 4710.97998046875,\n",
+       " 'Dendrite Branching Angle-max': 111.51499938964844,\n",
+       " 'Dendrite Branching Angle B-max': 127.0770034790039,\n",
+       " 'Dendrite Length-max': 368.09698486328125,\n",
+       " 'Dendrite Orientation Angle-max': 171.59300231933594,\n",
+       " 'Dendrite Position X_x-max': 1152.550048828125,\n",
+       " 'Dendrite Position Y_x-max': 608.7459716796875,\n",
+       " 'Dendrite Position Z_x-max': 71.08899688720703,\n",
+       " 'Dendrite Straightness-max': 1.0,\n",
+       " 'dendrites-count': 64,\n",
+       " 'Basal-count': 49,\n",
+       " 'Apical -count': 15,\n",
+       " 'level_1-count': 8}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dload.get_neuron_specific_features(path_to_neuron)"
+    "path_to_brainhack = '/Users/AlexCionca/Documents/BrainHack-2023/'\n",
+    "path_to_my_neuron = op.join(path_to_brainhack, 'Piriform_neurons/data/brain hack xls/22072c4 - Copy.xls')\n",
+    "\n",
+    "myneuron = dload.excel_to_neuron(path_to_my_neuron)\n",
+    "myneuron_feat = myneuron.get_feature_dict()\n",
+    "myneuron_feat"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#myneuron_feat_df = pd.DataFrame(myneuron_feat, index = [0])\n",
+    "#\n",
+    "#for i in range(25):\n",
+    "#    print(my_dendrite_df.shape)\n",
+    "#    my_dendrite_df.append(pd.DataFrame(myneuron_feat_df.loc[0].values + np.random.normal(np.zeros(myneuron_feat_df.shape[1]), 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
