Finalized clustering notebook

--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -50,9 +50,9 @@
    "source": [
     "importlib.reload(cluster)\n",
     "\n",
-    "cluster_df = my_matrix.dropna(axis = 0).apply(cluster.normalize)\n",
+    "cluster_df = my_matrix.dropna(axis = 0).apply(cluster.normalize).dropna(axis = 1)\n",
     "\n",
-    "cluster_model, label_2_color = cluster.hierarchical_cstm(cluster_df, d_thresh = 16000)\n",
+    "cluster_model, label_2_color = cluster.hierarchical_cstm(cluster_df, d_thresh = 20)\n",
     "\n",
     "# full_model, feature_df_nona.iloc[:, 1:], plot = True, col = lab2col\n",
     "centroids = cluster.get_centroids(cluster_model, cluster_df, col = label_2_color, plot = True)\n",
