Updated notebook with correct use of Neuron class

--- a/notebooks/data_loading.ipynb
+++ b/notebooks/data_loading.ipynb
@@ -30,7 +30,7 @@
     "path_to_my_neuron = op.join(path_to_brainhack, 'Piriform_neurons/data/brain hack xls/22072c4 - Copy.xls')\n",
     "\n",
     "myneuron = dload.excel_to_neuron(path_to_my_neuron)\n",
-    "myneuron_feat = myneuron.get_feature_dict()\n",
+    "myneuron_feat = myneuron.get_feature_dict(group_by_type = True)\n",
     "myneuron_feat"
    ]
   },
