--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -48,6 +48,7 @@
    },
    "outputs": [],
    "source": [
+    "importlib.reload(dload)\n",
     "path_to_data = path_to_data_widg.value\n",
     "neuron_df = dload.get_neuron_matrix(path_to_data, verb = False)\n",
     "\n",
