Updated notebook accordingly

--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -30,13 +30,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_path = '/mnt/c/Users/Cionkito/Documents/Brainhack2022/Piriform_neurons/data/brain hack xls'\n",
+    "default_path = '/mnt/c/Users/Cionkito/Documents/Brainhack2022/Piriform_neurons/data/brain hack xls-clo'\n",
     "\n",
     "path_to_data_widg = ipywidgets.Textarea(value=default_path,\n",
     "                                        placeholder='Insert your path here',\n",
     "                                        description='Path to data:',\n",
     "                                        disabled=False,\n",
-    "                                        layout=ipywidgets.Layout(width='750px', height='30px'))\n",
+    "                                        layout=ipywidgets.Layout(width='850px', height='30px'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting path\n",
+    "Here you may set the path and name of your data folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display(path_to_data_widg)"
    ]
   },
@@ -54,7 +71,7 @@
     "\n",
     "is_na_idx = np.where(neuron_df.isna())[0]\n",
     "\n",
-    "cluster_df = neuron_df.dropna(axis = 0).apply(cluster.normalize).dropna(axis = 1)"
+    "cluster_df = neuron_df.apply(cluster.normalize)"
    ]
   },
   {
@@ -98,11 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster_filtered_df = cluster_df.loc[:, feature_selection.value].copy()\n",
+    "cluster_filtered_df = cluster_df.loc[:, feature_selection.value].dropna(axis = 0).copy()\n",
     "\n",
     "print(f' {cluster_filtered_df.shape[1]} columns selected for the clustering :\\n-',\n",
     "      '\\n- '.join(cluster_filtered_df.columns.tolist()))\n",
-    "print(f'\\n{cluster_filtered_df.shape[0]} neurons selected for the clustering :\\n',\n",
+    "print(f'\\n{cluster_filtered_df.shape[0]} neurons selected for the clustering (after clearing missing values) :\\n',\n",
     "      cluster_filtered_df.index.tolist())"
    ]
   },
@@ -204,7 +221,7 @@
     "    param_n_clusters = None\n",
     "    param_d_thresh = d_thresh_slider.value\n",
     "\n",
-    "cluster_model, label_2_color = cluster.hierarchical_cstm(cluster_df, n_clusters = param_n_clusters, d_thresh = param_d_thresh,\n",
+    "cluster_model, label_2_color = cluster.hierarchical_cstm(cluster_filtered_df, n_clusters = param_n_clusters, d_thresh = param_d_thresh,\n",
     "                                                         figsize = (30, 10), plot = show_figures.value)\n",
     "\n",
     "labels = cluster_model.labels_\n",
@@ -214,14 +231,14 @@
     "    plotting_tools.save_figure(op.join(save_path_widg.value,\n",
     "                                       f'hierarchical-tree-{n_clusters:02d}clusters.png'))\n",
     "\n",
-    "centroids = cluster.get_centroids(cluster_model, cluster_df, col = label_2_color,\n",
+    "centroids = cluster.get_centroids(cluster_model, cluster_filtered_df, col = label_2_color,\n",
     "                                  plot = show_figures.value)\n",
     "\n",
     "if save_figures.value:\n",
     "    plotting_tools.save_figure(op.join(save_path_widg.value,\n",
     "                                       f'hierarchical-centroids-{n_clusters:02d}clusters.png'))\n",
     "\n",
-    "dist_to_centroid = cluster.get_centroid_distance(cluster_model, cluster_df, centroids)"
+    "dist_to_centroid = cluster.get_centroid_distance(cluster_model, cluster_filtered_df, centroids)"
    ]
   },
   {
@@ -230,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_save_df = pd.DataFrame(labels, index=cluster_df.index, columns=[f'labels-{n_clusters}k'])\n",
+    "label_save_df = pd.DataFrame(labels, index=cluster_filtered_df.index, columns=[f'labels-{n_clusters}k'])\n",
     "\n",
     "# Un-comment to save cluster labels (from 0 to n_cluster-1) in .csv file\n",
     "# where each row is a neuron with an ID and its corresponding label\n",
@@ -253,7 +270,7 @@
    "outputs": [],
    "source": [
     "for i in range(n_clusters):\n",
-    "    print(f'cluster #{i + 1} :', cluster_df.loc[labels == i].index.tolist())"
+    "    print(f'cluster #{i + 1} :', cluster_filtered_df.loc[labels == i].index.tolist())"
    ]
   },
   {
