remove useless line

--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_path = '/mnt/c/Users/Cionkito/Documents/Brainhack2022/Piriform_neurons/data/brain hack xls-clo'\n",
+    "default_path = '/Users/hugofluhr/Library/CloudStorage/GoogleDrive-hugo.fluhr@gmail.com/My Drive/Piriform_neurons/data/data_xls_v2'\n",
     "\n",
     "path_to_data_widg = ipywidgets.Textarea(value=default_path,\n",
     "                                        placeholder='Insert your path here',\n",
@@ -50,33 +50,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da0108f7c2394116ad4353c258641b52",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='/Users/hugofluhr/Library/CloudStorage/GoogleDrive-hugo.fluhr@gmail.com/My Drive/Piriform_neuro…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(path_to_data_widg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df0c16bddcd141958b6dc412f8cc7387",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=1, description='Loading data:', max=103, min=1, style=ProgressStyle(bar_color='#AAAAAA'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "importlib.reload(dload)\n",
     "path_to_data = path_to_data_widg.value\n",
     "neuron_df = dload.get_neuron_matrix(path_to_data, verb = False)\n",
-    "\n",
-    "is_na_idx = np.where(neuron_df.isna())[0]\n",
     "\n",
     "cluster_df = neuron_df.apply(cluster.normalize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +112,7 @@
     "                                                value=cluster_df.columns.tolist(),\n",
     "                                                rows=len(cluster_df.columns.tolist())+1,\n",
     "                                                description='Features',\n",
-    "                                                description_width = 20,\n",
+    "                                                description_width = 40,\n",
     "                                                disabled=False)\n",
     "\n",
     "#feature_selection_tag = ipywidgets.TagsInput(value=cluster_df.columns.tolist(),\n",
@@ -102,11 +130,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29e9fa5eeec741bab13ca54aef0cad66",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SelectMultiple(description='Features', index=(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(feature_selection)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(feature_selection)"
+    "feature_selection.value"
    ]
   },
   {
