enh: update notebook with old/new comparison

--- a/notebooks/data_loading.ipynb
+++ b/notebooks/data_loading.ipynb
@@ -26,12 +26,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_brainhack = '/Users/AlexCionca/Documents/BrainHack-2023/'\n",
-    "path_to_my_neuron = op.join(path_to_brainhack, 'Piriform_neurons/data/brain hack xls/22072c4 - Copy.xls')\n",
+    "importlib.reload(dload)\n",
     "\n",
-    "myneuron = dload.excel_to_neuron(path_to_my_neuron)\n",
-    "myneuron_feat = myneuron.get_feature_dict(group_by_type = True)\n",
-    "myneuron_feat"
+    "#path_to_brainhack = '/Users/AlexCionca/Documents/BrainHack-2023/'\n",
+    "#path_to_my_neuron = op.join(path_to_brainhack, 'Piriform_neurons/data/brain hack xls/22072c4 - Copy.xls')\n",
+    "path_to_data = \"home/acionca/Documents/code/piriform-cortex-diversity/data\"\n",
+    "path_to_new = op.join(path_to_data, \"nouveau.xlsx\")\n",
+    "\n",
+    "new_neuron = dload.excel_to_neuron(path_to_new, verb=True)\n",
+    "new_neuron_feat = new_neuron.get_feature_dict(group_by_type = True)\n",
+    "\n",
+    "path_to_old = op.join(path_to_data, \"ancien.xlsx\")\n",
+    "\n",
+    "old_neuron = dload.excel_to_neuron(path_to_old, verb=True)\n",
+    "old_neuron_feat2 = old_neuron.get_feature_dict(group_by_type = True)"
    ]
   },
   {
@@ -39,7 +47,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for (key1, val1), (key2, val2) in zip(new_neuron.items(), old_neuron.items()):\n",
+    "    print(\"nouveau\", key1, val1)\n",
+    "    print(\"ancien\", key2, val2)"
+   ]
   }
  ],
  "metadata": {
@@ -58,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4,
   "vscode": {
